исправление тестов в уроке на тесты