@@ -5,6 +5,7 @@ import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.Arguments;
 import org.junit.jupiter.params.provider.MethodSource;
 
+import java.util.Arrays;
 import java.util.List;
 import java.util.stream.Stream;
 
@@ -59,6 +60,6 @@ class Task15Test {
     void checkExceptionIfListContainsNull() {
         assertThrows(
                 IllegalArgumentException.class,
-                () -> new Task15().mapToLengths(List.of("abc", null, "def")));
+                () -> new Task15().mapToLengths(Arrays.asList("abc", null, "def")));
     }
 }
